--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -9,54 +10,57 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg: #0f1020;
-      --grad1: #d8b4fe;
-      --grad2: #a5b4fc;
-      --text: #f6f7fb;
-      --muted:#cfd2e9;
-      --card:#ffffff0f;
-      --stroke:#ffffff2a;
-      --accent:#a78bfa;
-      --accent-2:#93c5fd;
-      --shadow: 0 20px 40px #00000040;
+      --bg: #f9f7ff;
+      --grad1: #e8b8ff;
+      --grad2: #b9c7ff;
+      --text: #2d1f38;
+      --muted:#5e4a72;
+      --card:#ffffffcc;
+      --stroke:#e4daf4;
+      --accent:#caa8ff;
+      --accent-2:#a8b8ff;
+      --shadow: 0 10px 30px #c7b6ff80;
       --radius: 18px;
     }
-    *{box-sizing:border-box}
-    html,body{margin:0;padding:0;background:
-      radial-gradient(1200px 800px at 85% -10%, #93c5fd15 0%, transparent 60%),
-      radial-gradient(900px 700px at -10% 20%, #a78bfa18 0%, transparent 60%),
-      linear-gradient(180deg,#0b0c1a 0%, #12132a 100%);
-      color:var(--text); font-family:Poppins,system-ui,Segoe UI,Roboto,Arial,sans-serif}
+    *{box-sizing:border-box;}
+    html,body{
+      margin:0;padding:0;
+      background:
+        radial-gradient(900px 700px at 85% -10%, #b9c7ff40 0%, transparent 60%),
+        radial-gradient(700px 600px at -10% 20%, #e8b8ff50 0%, transparent 60%),
+        linear-gradient(180deg,#fff6ff 0%, #f8f5ff 100%);
+      color:var(--text);
+      font-family:'Poppins',system-ui,Segoe UI,Roboto,Arial,sans-serif;
+    }
     a{color:inherit;text-decoration:none}
     .container{max-width:1100px;margin:0 auto;padding:28px 20px}
-    header{position:sticky;top:0;backdrop-filter:saturate(1.5) blur(12px); background-color:#0f1020aa;border-bottom:1px solid var(--stroke);z-index:50}
+    header{position:sticky;top:0;backdrop-filter:saturate(1.5) blur(12px);background-color:#ffffffaa;border-bottom:1px solid var(--stroke);z-index:50}
     .nav{display:flex;gap:18px;align-items:center;justify-content:space-between}
-    .brand{display:flex;align-items:center;gap:10px;font-weight:700}
+    .brand{display:flex;align-items:center;gap:10px;font-weight:700;color:#5c3b8b}
     .brand .logo{width:28px;height:28px;border-radius:8px;background:linear-gradient(135deg,var(--grad1),var(--grad2));box-shadow:var(--shadow)}
     .navlinks a{opacity:.9;padding:10px;border-radius:12px}
-    .navlinks a:hover{background:#ffffff12}
-    .btn{display:inline-flex;align-items:center;gap:10px;padding:12px 18px;border-radius:14px;border:1px solid var(--stroke);background:linear-gradient(135deg,#ffffff14,#ffffff08);box-shadow:var(--shadow)}
+    .navlinks a:hover{background:#e8dbff40}
+    .btn{display:inline-flex;align-items:center;gap:10px;padding:12px 18px;border-radius:14px;border:1px solid var(--stroke);background:linear-gradient(135deg,#ffffffb8,#ffffff80);box-shadow:var(--shadow)}
     .btn:hover{transform:translateY(-1px)}
-    .cta{background:linear-gradient(135deg,var(--grad1),var(--grad2));color:#0b0c1a;border:none}
+    .cta{background:linear-gradient(135deg,var(--grad1),var(--grad2));color:#fff;border:none}
     /* hero */
-    .hero{padding:72px 0}
-    .hero h1{font-family:"Playfair Display",serif; font-size:48px; line-height:1.08; margin:0 0 14px}
+    .hero{padding:72px 0;text-align:left;}
+    .hero h1{font-family:"Playfair Display",serif;font-size:52px;line-height:1.08;margin:0 0 14px;color:#4b2b79}
     .hero p{color:var(--muted);max-width:720px;margin:0 0 26px;font-size:18px}
-    .tag{display:inline-block;margin-bottom:16px;padding:6px 12px;border-radius:999px;border:1px solid var(--stroke);background:#ffffff10;font-size:12px;letter-spacing:.2px}
-    /* sections */
+    .tag{display:inline-block;margin-bottom:16px;padding:6px 12px;border-radius:999px;border:1px solid var(--stroke);background:#e9ddff;font-size:12px;letter-spacing:.2px;color:#5c3b8b}
     section{padding:36px 0}
     .grid{display:grid;grid-template-columns:repeat(12,1fr);gap:18px}
     .card{grid-column:span 12;background:var(--card);border:1px solid var(--stroke);border-radius:var(--radius);padding:22px;box-shadow:var(--shadow)}
     @media(min-width:720px){
-      .hero h1{font-size:60px}
+      .hero h1{font-size:64px}
       .pricing .card{grid-column:span 3}
       .services .card{grid-column:span 4}
       .contacts .card{grid-column:span 4}
     }
-    h2{font-family:"Playfair Display",serif;font-size:34px;margin:0 0 12px}
+    h2{font-family:"Playfair Display",serif;font-size:34px;margin:0 0 12px;color:#4b2b79}
     .muted{color:var(--muted)}
     .price{font-size:36px;font-weight:700;background:linear-gradient(135deg,var(--grad1),var(--grad2));-webkit-background-clip:text;background-clip:text;color:transparent}
-    .pill{display:inline-block;padding:6px 10px;border-radius:999px;border:1px solid var(--stroke);font-size:12px;color:var(--muted)}
+    .pill{display:inline-block;padding:6px 10px;border-radius:999px;border:1px solid var(--stroke);font-size:12px;color:#7a5c9d;background:#f2eaff}
     .list{margin:12px 0 0;padding:0 0 0 16px;color:var(--muted)}
     footer{padding:36px 0;border-top:1px solid var(--stroke);color:var(--muted);text-align:center}
     .tiny{font-size:12px;opacity:.8}
@@ -74,23 +78,24 @@
         <a href="#precios">Precios</a>
         <a href="#servicios">Servicios</a>
         <a href="#contacto">Contacto</a>
-        <a class="btn cta" href="https://t.me/dollies_subsbot" target="_blank" rel="noopener">Comprar en Telegram</a>
+        <a class="btn cta" href="https://t.me/dollies_subsbot" target="_blank" rel="noopener">Comprar</a>
       </nav>
     </div>
   </header>
 
   <main class="container">
+
     <!-- HERO -->
     <section class="hero">
       <span class="tag">Actualizamos a diario</span>
-      <h1>Subscripciones simples, <br>estilo <em>aesthetic</em> y soporte directo</h1>
+      <h1>Subscripciones <br><em>aesthetic</em> y accesibles</h1>
       <p>
         En <strong>Dollies Priv</strong> ofrecemos <strong>dolls frescos a diario</strong> a precios accesibles,
-        junto con <strong>métodos</strong>, <strong>mini-cursos</strong>, <strong>cuentas premium públicas</strong>,
+        junto con <strong>métodos</strong>, <strong>mini cursos</strong>, <strong>cuentas premium públicas</strong>,
         dinámicas y mucho más.
       </p>
       <div style="display:flex;gap:12px;flex-wrap:wrap">
-        <a class="btn cta" href="https://t.me/dollies_subsbot" target="_blank" rel="noopener">Iniciar compra en @dollies_subsbot</a>
+        <a class="btn cta" href="https://t.me/dollies_subsbot" target="_blank" rel="noopener">Iniciar compra en Telegram</a>
         <a class="btn" href="#precios">Ver planes</a>
       </div>
     </section>
@@ -113,6 +118,14 @@
     <section id="precios" class="pricing">
       <h2>Planes de precios</h2>
       <p class="muted">Pagá en <strong>Robux</strong>. Elegí el que mejor se adapte a vos.</p>
+
+      <!-- Imagen decorativa -->
+      <div style="text-align:center; margin: 25px 0;">
+        <img src="https://i.pinimg.com/736x/28/db/88/28db88ee57a62135f30b62b3e8d953f5.jpg"
+             alt="Ilustración Dollies Priv aesthetic"
+             style="max-width: 380px; width: 90%; border-radius: 18px; box-shadow: 0 15px 30px #00000025;">
+      </div>
+
       <div class="grid">
         <div class="card">
           <span class="pill">Básico</span>
@@ -151,6 +164,7 @@
           </ul>
         </div>
       </div>
+
       <div style="margin-top:16px">
         <a class="btn cta" href="https://t.me/dollies_subsbot" target="_blank" rel="noopener">Comprar en @dollies_subsbot</a>
         <span class="tiny" style="margin-left:10px">Usá el comando <code>/comprar</code> para adquirir tu suscripción.</span>
@@ -171,7 +185,7 @@
         </div>
         <div class="card">
           <h3>Soporte & comunidad</h3>
-          <p class="muted">Acompañamiento por Telegram y dinámicas de la comunidad. Nada de actividades ilegales o dañinas.</p>
+          <p class="muted">Acompañamiento por Telegram y dinámicas de comunidad. Nada de actividades ilegales o dañinas.</p>
         </div>
       </div>
     </section>
@@ -204,4 +218,4 @@
 
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
 </body>
-</html>,
+</html>
