--- a/index.html
+++ b/index.html
@@ -7,41 +7,73 @@
   <meta name="description" content="Dollies Priv — dolls frescos a diario, planes accesibles y soporte por Telegram.">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
   <style>
+    /* —— PALETA (LIGHT) —— */
     :root{
-      --cream:#f6f2e9;--paper:#fffdf7;--coffee:#5b3a29;--coffee-2:#7a4e36;
-      --olive:#7d8f3a;--sage:#b8c2a2;--text:#2a1a12;--muted:#6b5a4b;
-      --stroke:#e8e0d3;--card:#ffffffcc;--shadow:0 14px 30px #00000018;--radius:18px
+      --cream:#f6f2e9; --paper:#fffdf7;
+      --coffee:#5b3a29; --coffee-2:#7a4e36;
+      --olive:#7d8f3a;  --sage:#b8c2a2;
+      --text:#2a1a12;   --muted:#6b5a4b;
+      --stroke:#e8e0d3; --card:#ffffffcc;
+      --shadow:0 14px 30px #00000018; --radius:18px;
+      --glass:#fff8efc7;              /* header/blur */
+      --panel:#fffdf7e6;              /* drawer fondo */
+      --btn-grad:linear-gradient(135deg,var(--olive),var(--coffee-2));
+      --bg-grad:
+        radial-gradient(900px 700px at 90% -10%, #b8c2a230 0%, transparent 60%),
+        radial-gradient(700px 600px at -10% 20%, #c7b29a30 0%, transparent 60%),
+        linear-gradient(180deg,#faf6ee 0%, #f3eee4 100%);
     }
+    /* —— PALETA (DARK) —— */
+    body.dark{
+      --cream:#14110f; --paper:#191512;
+      --coffee:#e9d9cf; --coffee-2:#e8c7b3;
+      --olive:#c9d79a;  --sage:#8fa07a;
+      --text:#efe9e4;   --muted:#cdbfb5;
+      --stroke:#3a2f28; --card:#ffffff12;
+      --shadow:0 16px 40px #00000066; --glass:#15110fc7;
+      --panel:#1a1613e6;
+      --btn-grad:linear-gradient(135deg,#b5c67e,#cfa486);
+      --bg-grad:
+        radial-gradient(900px 700px at 90% -10%, #7b865c25 0%, transparent 60%),
+        radial-gradient(700px 600px at -10% 20%, #6b524428 0%, transparent 60%),
+        linear-gradient(180deg,#12100f 0%, #1a1614 100%);
+    }
+
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;color:var(--text);
-      background:
-      radial-gradient(900px 700px at 90% -10%, #b8c2a230 0%, transparent 60%),
-      radial-gradient(700px 600px at -10% 20%, #c7b29a30 0%, transparent 60%),
-      linear-gradient(180deg,#faf6ee 0%, #f3eee4 100%);
+      background:var(--bg-grad);
       font-family:Poppins,system-ui,Segoe UI,Roboto,Arial,sans-serif}
     a{color:inherit;text-decoration:none}
     .container{max-width:1100px;margin:0 auto;padding:28px 20px}
 
     /* HEADER */
-    header{position:sticky;top:0;z-index:50;backdrop-filter:saturate(1.3) blur(10px);
-      background:#fff8efc7;border-bottom:1px solid var(--stroke)}
-    .nav{display:flex;align-items:center;justify-content:space-between;gap:16px}
+    header{position:sticky;top:0;z-index:60;backdrop-filter:saturate(1.3) blur(10px);
+      background:var(--glass);border-bottom:1px solid var(--stroke)}
+    .nav{display:flex;align-items:center;justify-content:space-between;gap:12px}
     .brand{display:flex;align-items:center;gap:10px;font-weight:700;color:var(--coffee)}
     .logo{width:28px;height:28px;border-radius:8px;background:linear-gradient(135deg,var(--olive),var(--coffee-2));box-shadow:var(--shadow)}
-    .btn{display:inline-flex;align-items:center;gap:10px;padding:12px 18px;border-radius:14px;border:1px solid var(--stroke);
-      background:linear-gradient(135deg,#ffffffc8,#fff7e8b0);box-shadow:var(--shadow)}
+
+    /* BUTTONS */
+    .btn{display:inline-flex;align-items:center;gap:10px;padding:12px 18px;border-radius:14px;
+      border:1px solid var(--stroke);background:linear-gradient(135deg,#ffffffc8,#fff7e8b0);box-shadow:var(--shadow)}
+    body.dark .btn{background:linear-gradient(135deg,#ffffff20,#ffffff10)}
     .btn:hover{transform:translateY(-1px)}
-    .cta{border:none;background:linear-gradient(135deg,var(--olive),var(--coffee-2));color:#fff}
+    .cta{border:none;background:var(--btn-grad);color:#fff}
 
     /* DESKTOP NAV */
     .navlinks{display:flex;gap:18px;align-items:center}
     .navlinks a{padding:10px;border-radius:10px;opacity:.95}
-    .navlinks a:hover{background:#00000008}
+    .navlinks a:hover{background:#0000000a}
+    /* Toggle dark */
+    .toggle{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:12px;border:1px solid var(--stroke);background:transparent}
+    .toggle svg{width:18px;height:18px}
 
     /* HAMBURGER */
     .hamburger{display:none;position:relative;width:42px;height:42px;border:1px solid var(--stroke);
-      border-radius:12px;background:#ffffff80}
+      border-radius:12px;background:#ffffff60}
+    body.dark .hamburger{background:#ffffff12}
     .hamburger span{position:absolute;left:9px;right:9px;height:2px;background:var(--coffee);transition:.25s}
+    body.dark .hamburger span{background:#efe9e4}
     .hamburger span:nth-child(1){top:12px}
     .hamburger span:nth-child(2){top:20px}
     .hamburger span:nth-child(3){top:28px}
@@ -50,22 +82,33 @@
     .hamburger[aria-expanded="true"] span:nth-child(3){transform:translateY(-8px) rotate(-45deg)}
 
     /* MOBILE PANEL */
-    .overlay{position:fixed;inset:0;background:#00000040;opacity:0;pointer-events:none;transition:.25s}
+    .overlay{position:fixed;inset:0;background:#00000040;opacity:0;pointer-events:none;transition:.25s;z-index:55}
     .drawer{position:fixed;top:0;right:-80%;width:78%;max-width:360px;height:100%;
-      background:var(--paper);border-left:1px solid var(--stroke);box-shadow:var(--shadow);
-      padding:22px;display:flex;flex-direction:column;gap:12px;transition:.25s}
-    .drawer a{padding:14px 10px;border-radius:12px}
-    .drawer a:hover{background:#00000006}
-    .drawer .buy{margin-top:auto}
+      background:var(--panel);backdrop-filter:blur(12px) saturate(1.4);
+      border-left:1px solid var(--stroke);box-shadow:var(--shadow);
+      padding:22px 24px 28px;display:flex;flex-direction:column;gap:16px;
+      overflow-y:auto;scroll-behavior:smooth;transition:transform .3s ease, right .3s ease;z-index:56}
+    .drawer a{padding:14px 10px;border-radius:12px;font-size:17px;color:var(--coffee);font-weight:500}
+    body.dark .drawer a{color:#efe9e4}
+    .drawer a:hover{background:#00000008}
+    .drawer .buy{margin-top:auto;background:var(--btn-grad);color:#fff;justify-content:center}
 
-    .menu-open .overlay{opacity:1;pointer-events:auto}
-    .menu-open .drawer{right:0}
+    /* Close button in drawer */
+    .closebtn{position:sticky;top:6px;align-self:flex-end;border:1px solid var(--stroke);
+      background:transparent;width:42px;height:42px;border-radius:12px;display:grid;place-items:center}
+    .closebtn svg{width:20px;height:20px}
+
+    .menu-open .overlay{opacity:1;pointer-events:auto;backdrop-filter:blur(4px)}
+    .menu-open .drawer{right:0;animation:slideIn .3s ease forwards}
+    @keyframes slideIn{from{transform:translateX(30px);opacity:0}to{transform:translateX(0);opacity:1}}
 
     /* HERO & SECTIONS */
     .hero{padding:72px 0}
     .hero h1{font-family:"Playfair Display",serif;font-size:56px;line-height:1.05;margin:0 0 12px;color:var(--coffee)}
+    body.dark .hero h1{color:#efe9e4}
     .hero p{max-width:760px;color:var(--muted);margin:0 0 22px;font-size:18px}
     .tag{display:inline-block;margin-bottom:14px;padding:6px 12px;border-radius:999px;border:1px solid var(--stroke);background:#fff6e7;color:var(--coffee);font-size:12px;letter-spacing:.2px}
+    body.dark .tag{background:#ffffff12;color:#efe9e4}
     section{padding:38px 0}
     .grid{display:grid;grid-template-columns:repeat(12,1fr);gap:18px}
     .card{grid-column:span 12;background:var(--card);border:1px solid var(--stroke);border-radius:var(--radius);padding:22px;box-shadow:var(--shadow)}
@@ -77,12 +120,14 @@
       .contacts .card{grid-column:span 4}
     }
     @media(max-width:719px){
-      .navlinks{display:none}         /* oculta links en móvil */
-      .hamburger{display:inline-block}/* muestra botón */
+      .navlinks{display:none}
+      .hamburger{display:inline-block}
     }
     h2{font-family:"Playfair Display",serif;font-size:34px;margin:0 0 10px;color:var(--coffee)}
+    body.dark h2{color:#efe9e4}
     .muted{color:var(--muted)}
     .pill{display:inline-block;padding:6px 10px;border-radius:999px;border:1px solid var(--stroke);color:var(--coffee);background:#fff4e1;font-size:12px}
+    body.dark .pill{background:#ffffff12;color:#efe9e4}
     .price{font-size:34px;font-weight:700;background:linear-gradient(135deg,var(--olive),var(--coffee));-webkit-background-clip:text;background-clip:text;color:transparent}
     .list{margin:12px 0 0;padding:0 0 0 16px;color:var(--muted)}
     footer{padding:36px 0;border-top:1px solid var(--stroke);color:var(--muted);text-align:center}
@@ -90,9 +135,12 @@
   </style>
 </head>
 <body>
-  <!-- Mobile overlay & drawer -->
+  <!-- Overlay y Drawer (móvil) -->
   <div class="overlay" id="overlay" aria-hidden="true"></div>
   <nav class="drawer" id="drawer" aria-label="Menú">
+    <button class="closebtn" id="closeDrawer" aria-label="Cerrar menú">
+      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M6 6l12 12M18 6L6 18" stroke-width="2" stroke-linecap="round"/></svg>
+    </button>
     <a href="#nosotros" onclick="closeMenu()">Sobre nosotros</a>
     <a href="#precios" onclick="closeMenu()">Precios</a>
     <a href="#servicios" onclick="closeMenu()">Servicios</a>
@@ -106,16 +154,21 @@
         <div class="logo"></div><span>Dollies <span style="opacity:.75">Priv</span></span>
       </div>
 
-      <!-- Desktop links -->
+      <!-- Nav escritorio -->
       <div class="navlinks" aria-label="Navegación principal">
         <a href="#nosotros">Sobre nosotros</a>
         <a href="#precios">Precios</a>
         <a href="#servicios">Servicios</a>
         <a href="#contacto">Contacto</a>
         <a class="btn cta" href="https://t.me/dollies_subsbot" target="_blank" rel="noopener">Comprar</a>
+        <!-- Toggle tema (desktop) -->
+        <button class="toggle" id="themeToggle" aria-pressed="false" title="Cambiar tema">
+          <svg id="iconSun" viewBox="0 0 24 24" fill="none" stroke="currentColor"><circle cx="12" cy="12" r="4" stroke-width="2"/><path d="M12 2v2M12 20v2M2 12h2M20 12h2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42" stroke-width="2" stroke-linecap="round"/></svg>
+          <svg id="iconMoon" style="display:none" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M21 12.79A9 9 0 1111.21 3a7 7 0 009.79 9.79z" stroke-width="2"/></svg>
+        </button>
       </div>
 
-      <!-- Hamburger (mobile) -->
+      <!-- Botón hamburguesa (móvil) -->
       <button class="hamburger" id="burger" aria-label="Abrir menú" aria-controls="drawer" aria-expanded="false">
         <span></span><span></span><span></span>
       </button>
@@ -235,32 +288,62 @@
   </footer>
 
   <script>
-    // Año en footer
+    // Año
     document.getElementById('y').textContent = new Date().getFullYear();
 
-    // Lógica de menú
+    // ====== Menú lateral ======
     const burger = document.getElementById('burger');
     const drawer = document.getElementById('drawer');
     const overlay = document.getElementById('overlay');
-    const root = document.documentElement;
+    const closeDrawerBtn = document.getElementById('closeDrawer');
 
     function openMenu(){
       document.body.classList.add('menu-open');
-      burger.setAttribute('aria-expanded','true');
-      overlay.removeAttribute('aria-hidden');
+      burger?.setAttribute('aria-expanded','true');
+      overlay?.removeAttribute('aria-hidden');
     }
     function closeMenu(){
       document.body.classList.remove('menu-open');
-      burger.setAttribute('aria-expanded','false');
-      overlay.setAttribute('aria-hidden','true');
+      burger?.setAttribute('aria-expanded','false');
+      overlay?.setAttribute('aria-hidden','true');
     }
-
-    burger?.addEventListener('click', ()=>{
+    burger?.addEventListener('click', ()=> {
       if (document.body.classList.contains('menu-open')) closeMenu(); else openMenu();
     });
     overlay?.addEventListener('click', closeMenu);
-    // Cerrar con ESC
-    window.addEventListener('keydown', (e)=>{ if(e.key==='Escape') closeMenu(); });
+    closeDrawerBtn?.addEventListener('click', closeMenu);
+    window.addEventListener('keydown', e => { if(e.key==='Escape') closeMenu(); });
+
+    // ====== Toggle Tema (Dark / Light) ======
+    const toggle = document.getElementById('themeToggle');
+    const iconSun = document.getElementById('iconSun');
+    const iconMoon = document.getElementById('iconMoon');
+
+    // Cargar preferencia guardada
+    const saved = localStorage.getItem('theme');
+    if (saved === 'dark' || (!saved && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+      document.body.classList.add('dark');
+      toggle?.setAttribute('aria-pressed','true');
+      iconSun.style.display='none'; iconMoon.style.display='inline';
+    }
+
+    function setTheme(dark){
+      if(dark){
+        document.body.classList.add('dark');
+        localStorage.setItem('theme','dark');
+        toggle?.setAttribute('aria-pressed','true');
+        iconSun.style.display='none'; iconMoon.style.display='inline';
+      }else{
+        document.body.classList.remove('dark');
+        localStorage.setItem('theme','light');
+        toggle?.setAttribute('aria-pressed','false');
+        iconMoon.style.display='none'; iconSun.style.display='inline';
+      }
+    }
+    toggle?.addEventListener('click', ()=>{
+      const isDark = document.body.classList.contains('dark');
+      setTheme(!isDark);
+    });
   </script>
 </body>
 </html>
