--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dollies Priv — Subscripciones</title>
-  <meta name="description" content="Dollies Priv — dolls frescos a diario, planes accesibles y soporte por Telegram.">
+  <meta name="description" content="Dollies Priv — bins frescos a diario, planes accesibles.">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
   <style>
     /* —— PALETA (LIGHT) —— */
@@ -178,10 +178,10 @@
   <main class="container">
     <!-- HERO -->
     <section class="hero">
-      <span class="tag">Actualizamos a diario</span>
+      <span class="tag">Bins a diario</span>
       <h1>Priv de confianza, <br>precios accesibles.</h1>
-      <p>En <strong>Dollies Priv</strong> ofrecemos <strong>dolls frescos a diario</strong> y beneficios como
-        métodos, mini cursos, cuentas premium públicas, dinámicas y más — con soporte directo por Telegram.</p>
+      <p>En <strong>Dollies Priv</strong> ofrecemos <strong> bins frescos a diario</strong> ademas de obtener beneficios como
+        métodos, mini cursos, cuentas premium públicas, dinámicas y más.</p>
       <div style="display:flex;gap:12px;flex-wrap:wrap">
         <a class="btn cta" href="https://t.me/dollies_subsbot" target="_blank" rel="noopener">Iniciar compra en Telegram</a>
         <a class="btn" href="#precios">Ver planes</a>
@@ -194,8 +194,7 @@
         <article class="card">
           <h2>¿Qué somos?</h2>
           <p class="muted"><strong>Dollies Priv</strong> ofrece contenido actualizado cada día y herramientas para tu
-            experiencia: métodos, mini cursos, beneficios en cuentas premium públicas y dinámicas de comunidad. Nuestro
-            foco es la <strong>accesibilidad</strong> y el <strong>buen soporte</strong>.</p>
+            experiencia: métodos, mini cursos, beneficios en cuentas premium públicas y dinámicas.</p>
         </article>
       </div>
     </section>
@@ -203,7 +202,7 @@
     <!-- PRECIOS -->
     <section id="precios" class="pricing">
       <h2>Planes de precios</h2>
-      <p class="muted">Pagá en <strong>Robux</strong>. Elegí el que mejor se adapte a vos.</p>
+      <p class="muted">Pagá en <strong>Robux</strong>. Elegí el que mejor se adapte a ti.</p>
 
       <div style="text-align:center; margin: 22px 0;">
         <img src="https://i.pinimg.com/736x/28/db/88/28db88ee57a62135f30b62b3e8d953f5.jpg"
@@ -213,28 +212,28 @@
 
       <div class="grid">
         <div class="card">
-          <span class="pill">Básico</span>
+          <span class="pill">Basic Plan</span>
           <h3>7 días</h3>
           <div class="price">18 Robux</div>
-          <ul class="list"><li>Acceso a contenido diario</li><li>Soporte por Telegram</li></ul>
+          <ul class="list"><li>Plan basico</li><li>Acceso a Scam, Extras, Scrapper</li></ul>
         </div>
         <div class="card">
-          <span class="pill">Intermedio</span>
+          <span class="pill"> Standar Plan</span>
           <h3>18 días</h3>
           <div class="price">22 Robux</div>
-          <ul class="list"><li>Todo del plan Básico</li><li>Actualizaciones priorizadas</li></ul>
+          <ul class="list"><li>Plan estandar</li><li>Acceso a Scam, Extras, Scrapper</li></ul>
         </div>
         <div class="card">
-          <span class="pill">Popular</span>
+          <span class="pill">Pro-Plan</span>
           <h3>30 días</h3>
           <div class="price">40 Robux</div>
-          <ul class="list"><li>Acceso completo</li><li>Soporte prioritario</li></ul>
+          <ul class="list"><li>Plan Pro</li><li>Acceso a Scam, Extras, Scrapper</li></ul>
         </div>
         <div class="card">
-          <span class="pill">Best Value</span>
+          <span class="pill">Max-Plan</span>
           <h3>45 días</h3>
           <div class="price">50 Robux</div>
-          <ul class="list"><li>Todo lo anterior</li><li>Beneficios extra de comunidad</li></ul>
+          <ul class="list"><li>Plan Max</li><li>Acceso a Scam, Extras, Scrapper</li></ul>
         </div>
       </div>
 
@@ -249,16 +248,16 @@
       <h2>Servicios incluidos</h2>
       <div class="grid">
         <div class="card">
-          <h3>Scraper (datos públicos)</h3>
-          <p class="muted">Obtención automatizada de datos <strong>públicos</strong> y permitidos para análisis y organización.</p>
+          <h3>Scraper</h3>
+          <p class="muted">Dropper de tarjetas con <strong>status</strong> sirve para sacar bins</p>
         </div>
         <div class="card">
-          <h3>Automatizaciones & extras</h3>
-          <p class="muted">Flujos automáticos, alertas y utilidades adicionales para mejorar tu experiencia.</p>
+          <h3>Scam</h3>
+          <p class="muted">Dropper de tarjetas vivas, con status, gateway, y response para sacar suscripciones en apps, compras, etc.</p>
         </div>
         <div class="card">
-          <h3>Soporte & comunidad</h3>
-          <p class="muted">Acompañamiento por Telegram y dinámicas de comunidad. Nada de actividades ilegales o dañinas.</p>
+          <h3>Extras</h3>
+          <p class="muted">Dropper de Extras de bins, sirve para obtener extras de un bin.</p>
         </div>
       </div>
     </section>
@@ -277,14 +276,14 @@
         </a>
         <a class="card" href="https://t.me/vipperina" target="_blank" rel="noopener">
           <h3>@vipperina</h3>
-          <p class="muted">Soporte y consultas</p>
+          <p class="muted">Contacto directo</p>
         </a>
       </div>
     </section>
   </main>
 
   <footer>
-    <div class="container">© <span id="y"></span> Dollies Priv · Todos los derechos reservados</div>
+    <div class="container">© <span id="y"></span> Dollies Priv</div>
   </footer>
 
   <script>
